welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:19: error: ';' expected but 'if' found.
}if (estFaceMur==true & estSurBiscuit()==false) {droite()
 ^